@@ -21,56 +21,32 @@ import static com.b2international.snowowl.test.commons.snomed.RandomSnomedIdenti
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.Collection;
+import java.util.List;
 import java.util.Map;
-import java.util.UUID;
 
 import org.eclipse.xtext.parser.IParser;
 import org.eclipse.xtext.serializer.ISerializer;
 import org.eclipse.xtext.validation.IResourceValidator;
-import org.junit.After;
-import org.junit.Before;
 import org.junit.Test;
 
-import com.b2international.collections.PrimitiveCollectionModule;
-import com.b2international.commons.options.Options;
-import com.b2international.index.Index;
-import com.b2international.index.Indexes;
-import com.b2international.index.mapping.Mappings;
-import com.b2international.index.query.Expressions.ExpressionBuilder;
-import com.b2international.index.revision.BaseRevisionIndexTest;
-import com.b2international.index.revision.RevisionIndex;
 import com.b2international.snowowl.core.ComponentIdentifier;
-import com.b2international.snowowl.core.branch.Branch;
-import com.b2international.snowowl.core.codesystem.CodeSystem;
-import com.b2international.snowowl.core.domain.BranchContext;
-import com.b2international.snowowl.core.internal.validation.ValidationRepository;
-import com.b2international.snowowl.core.internal.validation.ValidationThreadPool;
-import com.b2international.snowowl.core.plugin.ClassPathScanner;
-import com.b2international.snowowl.core.repository.RepositoryCodeSystemProvider;
-import com.b2international.snowowl.core.request.RevisionIndexReadRequest;
-import com.b2international.snowowl.core.uri.ResourceURIPathResolver;
 import com.b2international.snowowl.core.validation.ValidationRequests;
 import com.b2international.snowowl.core.validation.eval.ValidationRuleEvaluator;
-import com.b2international.snowowl.core.validation.issue.ValidationIssue;
-import com.b2international.snowowl.core.validation.issue.ValidationIssueDetailExtension;
-import com.b2international.snowowl.core.validation.issue.ValidationIssueDetailExtensionProvider;
 import com.b2international.snowowl.core.validation.issue.ValidationIssues;
-import com.b2international.snowowl.core.validation.rule.ValidationRule;
 import com.b2international.snowowl.core.validation.rule.ValidationRule.Severity;
-import com.b2international.snowowl.core.validation.whitelist.ValidationWhiteList;
 import com.b2international.snowowl.snomed.common.SnomedConstants.Concepts;
 import com.b2international.snowowl.snomed.common.SnomedTerminologyComponentConstants;
 import com.b2international.snowowl.snomed.core.ecl.DefaultEclParser;
 import com.b2international.snowowl.snomed.core.ecl.DefaultEclSerializer;
 import com.b2international.snowowl.snomed.core.ecl.EclParser;
 import com.b2international.snowowl.snomed.core.ecl.EclSerializer;
-import com.b2international.snowowl.snomed.datastore.SnomedDatastoreActivator;
 import com.b2international.snowowl.snomed.datastore.index.entry.SnomedConceptDocument;
 import com.b2international.snowowl.snomed.datastore.index.entry.SnomedDescriptionIndexEntry;
+import com.b2international.snowowl.snomed.datastore.index.entry.SnomedRefSetMemberIndexEntry;
 import com.b2international.snowowl.snomed.ecl.EclStandaloneSetup;
 import com.b2international.snowowl.test.commons.snomed.RandomSnomedIdentiferGenerator;
-import com.b2international.snowowl.test.commons.snomed.TestBranchContext;
-import com.fasterxml.jackson.annotation.JsonInclude.Include;
+import com.b2international.snowowl.test.commons.snomed.TestBranchContext.Builder;
+import com.b2international.snowowl.test.commons.validation.BaseValidationTest;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableList;
@@ -81,84 +57,37 @@ import com.google.inject.Injector;
 /**
  * @since 6.0
  */
-public class SnomedQueryValidationRuleEvaluatorTest extends BaseRevisionIndexTest {
+public class SnomedQueryValidationRuleEvaluatorTest extends BaseValidationTest {
 
 	private static final Injector INJECTOR = new EclStandaloneSetup().createInjectorAndDoEMFRegistration();
 	
-	/**
-	 * Usage of this class intended for testing purposes only
-	 */
-	private static final class TestValidationDetailExtension implements ValidationIssueDetailExtension {
-
-		@Override
-		public void prepareQuery(ExpressionBuilder queryBuilder, Options options) {}
-
-		@Override
-		public void extendIssues(BranchContext context, Collection<ValidationIssue> issues, Map<String, Object> ruleParameters) {}
-
-		@Override
-		public String getToolingId() { 
-			return SnomedQueryValidationRuleEvaluatorTest.TOOLING_ID; 
-		}
-		
-	}
-	
-	private BranchContext context;
 	private SnomedQueryValidationRuleEvaluator evaluator;
-	private ValidationRepository repository;
 	
-	private static final String TOOLING_ID = "toolingId";
-
 	@Override
-	protected Collection<Class<?>> getTypes() {
-		return ImmutableList.of(SnomedConceptDocument.class, SnomedDescriptionIndexEntry.class);
+	protected Collection<Class<?>> getAdditionalTypes() {
+		return List.of(
+			SnomedConceptDocument.class, 
+			SnomedDescriptionIndexEntry.class, 
+			SnomedRefSetMemberIndexEntry.class
+		);
 	}
 	
 	@Override
-	protected void configureMapper(ObjectMapper mapper) {
-		super.configureMapper(mapper);
-		mapper.setSerializationInclusion(Include.NON_NULL);
-		mapper.registerModule(new PrimitiveCollectionModule());
-	}
+	protected void configureContext(Builder context) {
+		super.configureContext(context);
+		context
+			.with(EclParser.class, new DefaultEclParser(INJECTOR.getInstance(IParser.class), INJECTOR.getInstance(IResourceValidator.class)))
+			.with(EclSerializer.class, new DefaultEclSerializer(INJECTOR.getInstance(ISerializer.class)));
 	
-	@Before
-	public void setup() {
-		final Index index = Indexes.createIndex(UUID.randomUUID().toString(), getMapper(), new Mappings(ValidationRule.class, ValidationIssue.class, ValidationWhiteList.class));
-		repository = new ValidationRepository(index);
-		ClassPathScanner scanner = new ClassPathScanner("com.b2international");
-		context = TestBranchContext.on(MAIN)
-				.with(ObjectMapper.class, getMapper())
-				.with(EclParser.class, new DefaultEclParser(INJECTOR.getInstance(IParser.class), INJECTOR.getInstance(IResourceValidator.class)))
-				.with(EclSerializer.class, new DefaultEclSerializer(INJECTOR.getInstance(ISerializer.class)))
-				.with(RepositoryCodeSystemProvider.class, (referenceBranch) -> {
-					return CodeSystem.builder()
-							.shortName(SnomedTerminologyComponentConstants.SNOMED_SHORT_NAME)
-							.repositoryId(SnomedDatastoreActivator.REPOSITORY_UUID)
-							.name("SNOMED CT")
-							.terminologyId(SnomedTerminologyComponentConstants.TERMINOLOGY_ID)
-							.branchPath(MAIN)
-							.build();
-				})
-				.with(Index.class, rawIndex())
-				.with(RevisionIndex.class, index())
-				.with(ValidationThreadPool.class, new ValidationThreadPool(1, 1, 1))
-				.with(ValidationRepository.class, repository)
-				.with(ClassPathScanner.class, scanner)
-				.with(ValidationIssueDetailExtensionProvider.class, new ValidationIssueDetailExtensionProvider(scanner))
-				.with(ResourceURIPathResolver.class, ResourceURIPathResolver.fromMap(Map.of("SNOMEDCT", Branch.MAIN_PATH)))
-				.build();
 		evaluator = new SnomedQueryValidationRuleEvaluator();
 		if (!ValidationRuleEvaluator.Registry.types().contains(evaluator.type())) {
 			ValidationRuleEvaluator.Registry.register(evaluator);
 		}
-		
-		context.service(ValidationIssueDetailExtensionProvider.class).addExtension(new TestValidationDetailExtension());
-		
 	}
 	
-	@After
-	public void teardown() {
-		repository.dispose();
+	@Override
+	protected Map<String, String> getTestCodeSystemPathMap() {
+		return Map.of(SnomedTerminologyComponentConstants.SNOMED_SHORT_NAME, MAIN);
 	}
 	
 	@Test
@@ -293,24 +222,15 @@ public class SnomedQueryValidationRuleEvaluatorTest extends BaseRevisionIndexTes
 		assertThat(issues.getItems().get(0).getAffectedComponent()).isEqualTo(ComponentIdentifier.of(SnomedTerminologyComponentConstants.DESCRIPTION_NUMBER, description1));
 	}
 	
-	private ValidationIssues validate(final String ruleId) {
-		new RevisionIndexReadRequest<>(ValidationRequests.prepareValidate().build()).execute(context);
-		return ValidationRequests.issues().prepareSearch()
-			.all()
-			.filterByRule(ruleId)
-			.build()
-			.execute(context);
-	}
-
 	private String createSnomedQueryRule(final Map<String, Object> ruleQuery) throws JsonProcessingException {
 		return ValidationRequests.rules().prepareCreate()
 			.setType(evaluator.type())
 			.setMessageTemplate("Error")
 			.setSeverity(Severity.ERROR)
-			.setImplementation(context.service(ObjectMapper.class).writeValueAsString(ruleQuery))
-			.setToolingId(TOOLING_ID)
+			.setImplementation(context().service(ObjectMapper.class).writeValueAsString(ruleQuery))
+			.setToolingId(SnomedTerminologyComponentConstants.TERMINOLOGY_ID)
 			.build()
-			.execute(context);
+			.execute(context());
 	}
 	
 }
